fix: make grid settings more readable (contrast)

--- a/src/app/simulation/grid-settings/maze-settings/maze-settings.component.scss
+++ b/src/app/simulation/grid-settings/maze-settings/maze-settings.component.scss
@@ -7,7 +7,6 @@ body.theme-dark :host .button {
 }
 
 body.theme-dark :host .is-primary {
-    color: var(--bulma-dark) !important;
     background-color: var(--bulma-primary) !important;
 }
 
