--- a/src/app/simulation/grid-settings/pathfinding-settings/pathfinding-settings.component.scss
+++ b/src/app/simulation/grid-settings/pathfinding-settings/pathfinding-settings.component.scss
@@ -1,14 +1,13 @@
-.button {
-    border-radius: 0;
-}
-
 body.theme-dark :host .is-danger {
-    color: var(--bulma-dark) !important;
     background-color: var(--bulma-danger) !important;
 }
 
 body.theme-dark :host .button {
     outline: 1px solid var(--white-dark-87);
+}
+
+.button {
+    border-radius: 0;
 }
 
 .radio {
